RESOLVED FIXED221758
[iOS][FCR] Range inputs have an incorrect RTL appearance
https://bugs.webkit.org/show_bug.cgi?id=221758
Summary [iOS][FCR] Range inputs have an incorrect RTL appearance
Aditya Keerthi
Reported 2021-02-11 09:13:50 PST
There is currently no difference between RTL and LTR appearance.
Attachments
Patch (4.14 KB, patch)
2021-02-11 09:17 PST, Aditya Keerthi
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-11 09:14:07 PST
Aditya Keerthi
Comment 2 2021-02-11 09:17:45 PST
EWS
Comment 3 2021-02-11 11:17:16 PST
Committed r272740: <https://commits.webkit.org/r272740> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419998 [details].
Note You need to log in before you can comment on or make changes to this bug.