[iOS][FCR] Range inputs have an incorrect RTL appearance https://bugs.webkit.org/show_bug.cgi?id=221758 <rdar://problem/74236993>

Reviewed by Wenson Hsieh.

Source/WebCore:

Test: fast/forms/ios/form-control-refresh/range/rtl-appearance.html

* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::paintSliderTrackWithFormControlRefresh):

In a right-to-left appearance, the track should begin filling from
the right.

LayoutTests:

Added a reference mismatch test to verify that a range input with
dir="rtl" has a distinct appearance from a standard range input.

* fast/forms/ios/form-control-refresh/range/rtl-appearance-expected-mismatch.html: Added.
* fast/forms/ios/form-control-refresh/range/rtl-appearance.html: Added.


Canonical link: https://commits.webkit.org/233980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272740 268f45cc-cd09-0410-ab3c-d52691b4dbfc